# OpenGridIN_BPP

./: .gitignore  LICENSE  README.md
.github/workflows/: refresh-data.yml
data/overrides/: README.md  name_corrections.json  voltage_corrections.json
data/reference/: voltage_classes.json
docs/: app.js
pipeline/: Makefile  pyproject.toml
pipeline/pipeline/: __init__.py  _paths.py  export.py  merge.py  overpass.py  pypsa_earth.py  refresh.py  simplify.py  validate.py  voltage_classes.py
pipeline/tests/: test_merge.py  test_simplify.py  test_voltage_classes.py
site/: app.js  index.html  style.css
